--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/noemyroberta/car_rent_app/issues"
   },
-  "homepage": "https://github.com/noemyroberta/car_rent_app#readme"
+  "homepage": "https://github.com/noemyroberta/car_rent_app#readme",
+  "dependencies": {
+    "axios": "^1.6.7",
+    "express": "^4.18.2"
+  }
 }
